# CSC3221_ProgrammingForGames

./: .gitignore  .travis.yml  README.md
misc/: project2_circle_square_intersection_testing.dxf
project1/: .gitignore  CMakeLists.txt  Makefile  Quaternion.cpp  Vector3DStack.cpp  Vector3DStack.h
project1/inc/: Quaternion.h  Vector3DStack.h
project1/src/: Quaternion.cpp  Vector3DStack.cpp
project1/test/: CxxTests.h  MyTest.h  QuaternionTest.h  Test.cpp  Vector3DStackTest.h
project2/: CMakeLists.txt  Doxyfile
project2/cmake/: CodeCoverage.cmake
project2/inc/: BoundingBox.h  Circle.h  GameImpl.h  Shape.h  Square.h  Vector2D.h
project2/src/: BoundingBox.cpp  Circle.cpp  Game.cpp  GameImpl.cpp  Shape.cpp  Square.cpp  Vector2D.cpp
project2/test/: BoundingBoxTest.h  CircleTest.h  GameImplTest.h  GameTest.h  ShapeTest.h  SquareTest.h  Vector2DTest.h
